# comments-cleaner

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cleaner.rs  constants.rs  language.rs  logger.rs  main.rs  processor.rs
